# crkbd-firm-custom

./: CMakeLists.txt  main.c
inc/: PIN_CFG.h  gpio.h  keyboard.h  keymap.h  led.h  scan.h  serial.h  uart_tx.pio.h
inc/keymap/: keycodes.h  keymap.h
inc/pio/: pio.h  ws2812.pio.h
inc/usb/: tusb_config.h  usb_descriptors.h  usb_hid.h
src/: CMakeLists.txt  gpio.c  keyboard.c  led.c  scan.c  serial.c  uart_tx.pio
src/pio/: pio.c  ws2812.pio
src/usb/: usb_descriptors.c  usb_hid.c  usb_hid_cb.c
